--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
 
     <style name="Theme.VeryFullScreen.Splash" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/white</item>
         <item name="colorPrimary">@android:color/holo_red_light</item>
         <item name="colorPrimaryVariant">@android:color/holo_green_light</item>
         <item name="colorOnPrimary">@android:color/holo_blue_light</item>
@@ -24,6 +24,6 @@
         <item name="colorSecondaryVariant">@android:color/holo_green_light</item>
         <item name="colorOnSecondary">@android:color/holo_blue_light</item>
         <item name="android:fitsSystemWindows">false</item>
-        <item name="android:navigationBarColor">@color/purple_700</item>
+        <item name="android:navigationBarColor">@color/teal_200</item>
     </style>
 </resources>
